# plugin-registry

./: CMakeLists.txt  common.cpp  common.h  main.cpp  plugin.cpp
